service-loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicdnginx-lb
spec:
  type: LoadBalancer
  selector:
    app: cicdnginx
  ports:
  - port: 80
    targetPort: 80
