service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicdnginx
spec:
  selector:
    app: cicdnginx
  ports:
  - port: 80
    targetPort: 80
