ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicdnginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: cicdnginx
                port:
                  number: 80
  ingressClassName: nginx
